# NonoSub

./: .gitignore  ASSET_LICENSE.md  ASSET_RIGHTS.md  README.md  THIRD_PARTY_NOTICES.md  package.json  pnpm-lock.yaml  rust-toolchain.toml
.claude/: launch.json
.github/workflows/: ci.yml
demo/: README.md
docs/: AI_CONTRIBUTIONS.md  ARCHITECTURE.md  BUILD_WEEK_LOG.md  JUDGE_INSTRUCTIONS.md  LUNA_LIVE_TRANSLATION_BENCHMARK.md  NONO_ANIMATION_HANDOFF.md  NONO_CANDIDATE_PROMOTION.md  PRIVACY.md  SESSION_REPORT_NONO_ARM_FIX.md  SESSION_REPORT_NONO_FACEKEYS.md  SUBMISSION_CHECKLIST.md  SUBMISSION_SPRINT.md  nono-arm-fix-session.diff
docs/plans/: ATOMIC_FILE_RETRANSLATION.md  AUTONOMOUS_QA_CAMPAIGN.md  BOUNDED_LONG_SESSIONS.md  FILE_BOUNDARY_ID_STABILITY.md  INVISIBLE_PRODUCT_SHELL.md  LIVE_CLAUSE_LIFECYCLE.md  LIVE_SUBTITLE_SAFETY_ENVELOPE.md  MULTI_WINDOW_STATE_CONVERGENCE.md  PINNED_LESSON_IDENTITY.md  PLAYBACK_OWNERSHIP.md  REALTIME_SESSION_HARDENING.md  RELEASE_STATE_AND_ACCEPTANCE.md  SESSION_GENERATION_ISOLATION.md  TRANSLATION_FAILURE_CONTAINMENT.md  TRANSPORT_AND_MEDIA_CLOCKS.md
licenses/: KLEE_ONE_OFL.txt  NONTOON_ZLIB.txt
scripts/: audit_nono_glb.mjs  build_english_fixture.sh  build_indirect_refusal_fixture.sh  build_two_speaker_fixture.sh  cut_nono_clips.py  export_nono_final.py  prepare_nono_production.py  prepare_nono_release.py  render_chalkboard_asset.py  render_nono_candidate.py  retarget_nono_capture.py  run_unattended_qa.sh  save_qa_api_key.sh  strip_nono_glb.mjs
src/: app.css  app.html
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: chunking.rs  contracts.rs  lib.rs  live.rs  luna_benchmark.rs  main.rs  media.rs  media_keys.rs  openai.rs  pipeline.rs
src/lib/: ArcadeSubtitleCard.svelte  BroadcastSubtitleCard.svelte  contracts.ts  (+59 more)
(+2 files in other folders)
