[package]
name = "nonosub"
version = "0.1.0"
description = "Interactive subtitles that turn foreign-language media into a language lesson"
authors = ["Nico"]
edition = "2021"
repository = "https://github.com/nikokuma/NonoSub"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "nonosub_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon", "macos-private-api"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
base64 = "0.22"
futures-util = "0.3"
hound = "3.5"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
symphonia = { version = "0.6", default-features = false, features = ["aac", "isomp4"] }
tempfile = "3"
tokio = { version = "1", features = ["fs", "sync", "time", "macros", "net"] }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
unicode-segmentation = "1.12"

[target.'cfg(target_os = "macos")'.dependencies]
screencapturekit = { version = "8", features = ["async", "macos_14_0"] }
objc2-app-kit = "0.3"
objc2-core-graphics = "0.3"
objc2-foundation = "0.3"

[profile.test]
debug = 0
incremental = false

[profile.dev]
debug = 0
incremental = false
